# canada-recalls-api

./: README.md  pyproject.toml  requirements.txt
src/: demo.ipynb
src/canada_recalls/: __init__.py  utils.py
src/canada_recalls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
